<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name_placeholder" />

    <LinearLayout
        android:id="@+id/editItemLayout_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
	        android:id="@+id/tvItemPriority"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/item_priority_placeholder" />

        <TextView
            android:id="@+id/tvItemDueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/item_duedate_placeholder"
            android:textAlignment="gravity" />

    </LinearLayout>

</LinearLayout>