<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/etEditName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/editItemLayout_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >
        
        <TextView
            android:id="@+id/tvlblPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_priority_placeholder" />

        <Spinner
            android:id="@+id/spinnerItemPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textAlignment="gravity" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/editItemLayout_duedate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/tvlblDueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_label_duedate" />

        <TextView
            android:id="@+id/tvlblDueDateValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/item_label_none"
            android:textAlignment="gravity" />

    </LinearLayout>

    <Button
        android:id="@+id/itembtnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_label_save" />

</LinearLayout>